--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ keywords = []
 categories = []
 
 [dependencies]
+http = "0.2.5"
 log = "0.4.14"
 reqwest = { version = "0.11.6", features = ["json"] }
 serde = { version = "1.0.130", features = ["derive"] }
