--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,9 @@ categories = [
 ]
 
 [dependencies]
+async-trait = "0.1.52"
+async-tungstenite = { version = "0.16.1", features = ["tokio-runtime"] }
+futures-util = "0.3.19"
 http = "0.2.6"
 log = "0.4.14"
 reqwest = { version = "0.11.8", features = ["json"] }
