--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ reqwest = { version = "0.11.8", features = ["json"], default-features = false }
 serde = { version = "1.0.133", features = ["derive"] }
 serde_json = "1.0.74"
 thiserror = "1.0.30"
+url = "2.5.2"
 
 [features]
 default = ["native-tls"]
