--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,25 +11,13 @@ jobs:
     if: |
       !(github.event_name == 'push' && contains(github.event.head_commit.message, '[skip ci]'))
     steps:
-    - uses: actions/checkout@v2
-    - name: Cache cargo registry
-      uses: actions/cache@v1
+    - uses: actions/checkout@v4
+    - uses: Swatinem/rust-cache@v2
       with:
-        path: ~/.cargo/registry
-        key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
-    - name: Cache cargo index
-      uses: actions/cache@v1
-      with:
-        path: ~/.cargo/git
-        key: ${{ runner.os }}-cargo-index-${{ hashFiles('**/Cargo.lock') }}
-    - name: Cache cargo build
-      uses: actions/cache@v1
-      with:
-        path: target
-        key: ${{ runner.os }}-cargo-build-target-${{ hashFiles('**/Cargo.lock') }}
+        save-if: ${{ github.ref == 'refs/heads/master' }}
     - name: Install clippy
       run: rustup component add clippy
     - name: Run tests
       run: cargo test --verbose --all
     - name: Run clippy
-      run: cargo clippy -- -D warnings
+      run: cargo clippy
